--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,1 +1,4 @@
+<!--BOOTSTRAP-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+<!--STYLES-->
+<link rel="stylesheet" href="css/styles.css">
