--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog app</title>
-    <%- include('partials/head.ejs') %>
-</head>
-<body>
-    <%- include('partials/nav.ejs') %>
-    <main class="container">
-        <section class="filters my-4">
-            <ul>
-                <li>
-                    <a class="filter" href="#">All</a>
-                </li>
-                <li>
-                    <a class="filter" href="#">Most liked</a>
-                </li>
-                <li>
-                    <a class="filter" href="#">Most discussed</a>
-                </li>
-            </ul>
-        </section>
-        <section class="posts">
-            <article class="post-box row py-4 px-3">
-                <div class="col-sm-6">
-                    <h2>Post title</h2>
-                    <p class="post-content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi sequi at animi officia ad ducimus mollitia illo, a odit facere accusantium. Consequatur id incidunt quia neque omnis est provident quibusdam.</p>
-                </div>
-                <img class="post-img col-6" src="#" alt="post-img">
-                <div class="post-features">
-                    <span>author</span>
-                    <span>date</span>
-                    <span>likes</span>
-                    <span>comments</span>
-                </div>
-            </article>
-        </section>
-    </main>
-    <footer class="container">
-        <p>Copyright</p>
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Blog app</title>
+        <%- include('partials/head.ejs') %>
+    </head>
+    <body>
+        <%- include('partials/nav.ejs') %>
+        <main class="container">
+            <section class="filters my-4">
+                <ul>
+                    <li>
+                        <a class="button secondary" href="#">All</a>
+                    </li>
+                    <li>
+                        <a class="button secondary" href="#">Most liked</a>
+                    </li>
+                    <li>
+                        <a class="button secondary" href="#">Most discussed</a>
+                    </li>
+                    <div class="search-bar">
+                        <input class="form-control" type="text" name="search" />
+                    </div>
+                </ul>
+            </section>
+            <section class="posts">
+                <article class="post row my-4 py-4 px-3">
+                    <div class="col-sm-8">
+                        <h2>Post title</h2>
+                        <p class="post-content">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Quasi sequi at animi officia ad ducimus
+                            mollitia illo, a odit facere accusantium.
+                            Consequatur id incidunt quia neque omnis est
+                            provident quibusdam.
+                        </p>
+                    </div>
+                    <img class="post-img col-4" src="#" alt="post-img" />
+                    <div class="post-features">
+                        <div class="post-feature post-interactions">
+                            <span>author</span>
+                            <span>date</span>
+                            <span>likes</span>
+                            <span>comments</span>
+                        </div>
+                        <div class="post-feature post-tags">
+                            <span>tag1</span>
+                            <span>tag2</span>
+                            <span>tag3</span>
+                        </div>
+                    </div>
+                </article>
+                <article class="post row my-4 py-4 px-3">
+                    <div class="col-sm-8">
+                        <h2>Post title</h2>
+                        <p class="post-content">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Quasi sequi at animi officia ad ducimus
+                            mollitia illo, a odit facere accusantium.
+                            Consequatur id incidunt quia neque omnis est
+                            provident quibusdam.
+                        </p>
+                    </div>
+                    <img class="post-img col-4" src="#" alt="post-img" />
+                    <div class="post-features">
+                        <div class="post-feature post-interactions">
+                            <span>author</span>
+                            <span>date</span>
+                            <span>likes</span>
+                            <span>comments</span>
+                        </div>
+                        <div class="post-feature post-tags">
+                            <span>tag1</span>
+                            <span>tag2</span>
+                            <span>tag3</span>
+                        </div>
+                    </div>
+                </article>
+                <article class="post row my-4 py-4 px-3">
+                    <div class="col-sm-8">
+                        <h2>Post title</h2>
+                        <p class="post-content">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing
+                            elit. Quasi sequi at animi officia ad ducimus
+                            mollitia illo, a odit facere accusantium.
+                            Consequatur id incidunt quia neque omnis est
+                            provident quibusdam.
+                        </p>
+                    </div>
+                    <img class="post-img col-4" src="#" alt="post-img" />
+                    <div class="post-features">
+                        <div class="post-feature post-interactions">
+                            <span>author</span>
+                            <span>date</span>
+                            <span>likes</span>
+                            <span>comments</span>
+                        </div>
+                        <div class="post-feature post-tags">
+                            <span>tag1</span>
+                            <span>tag2</span>
+                            <span>tag3</span>
+                        </div>
+                    </div>
+                </article>
+            </section>
+            <div class="pagination">
+                <a class="button" href="#">&laquo;</a>
+                <a class="button" href="#">1</a>
+                <a class="button" href="#">2</a>
+                <a class="button" href="#">3</a>
+                <a class="button" href="#">&raquo;</a>
+            </div>
+        </main>
+        <footer class="container">
+            <p>&copy; Copyright <%= new Date().getFullYear() %></p>
+        </footer>
+    </body>
 </html>
