--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,9 @@
-<nav class="navbar bg-body-tertiary justify-content-between">
+<nav class="navbar justify-content-between">
     <div class="container">
-        <a href="#">Favorites</a>
-        <h1 class="navbar-brand">Blog App</h1>
-        <a href="#">Create post</a>
+        <a href="/my-posts">My posts</a>
+        <a href="/">
+            <h1 class="navbar-brand">Blog App</h1>
+        </a>
+        <a href="/create">Create post</a>
     </div>
 </nav>
