get data form back and new styles

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto+Slab:wght@400;700;900&display=swap');
+
 :root{
     --color-black: #1a1a1a;
     --color-black-hover: #000000;
@@ -5,7 +7,7 @@
     --color-gray-hover: #eaeaea;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6, p{
     margin: 0;
 }
 
@@ -13,6 +15,8 @@ h1, h2, h3, h4, h5, h6{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto Slab', serif;
 }
 
 .container{
@@ -48,8 +52,25 @@ h1, h2, h3, h4, h5, h6{
     transition: all 0.3s;
 }
 
-.post img{
-    object-fit: cover;
+.post-info{
+    height: 8rem;
+}
+
+.post-info p{
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    overflow-y: hidden;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
+.post-info img{
+    height: 100%;
+    object-fit: contain;
+}
+
+.post-content{
+    font-size: .9rem;
 }
 
 .post-features{
@@ -73,6 +94,37 @@ h1, h2, h3, h4, h5, h6{
     gap: .5rem;
     margin: 1rem 0;
 }
+
+/* --- POST PAGE --- */
+
+.post-page img{
+    display: inline-block;
+    max-height: 24rem;
+    width: 100%;
+    object-fit: contain;
+}
+
+/* --- MY POSTS --- */
+
+.my-post{
+    background-color: var(--color-gray-hover);
+    border-radius: .4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+
+.my-post h3{
+    font-size: 1.2rem;
+}
+
+.my-post-options{
+    display: flex;
+    gap: 1rem;
+}
+
+/* --- GENERAL --- */
 
 .button{
     border: 0;
@@ -102,30 +154,13 @@ h1, h2, h3, h4, h5, h6{
 }
 
 footer{
+    background-color: var(--color-gray);
     font-size: .8rem;
     text-align: center;
 }
 
-.post-page img{
-    display: inline-block;
-    object-fit: cover;
-    width: 100%;
-}
-
-.my-post{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .8rem .8rem;
-}
-
-.my-post h3{
-    font-size: 1.2rem;
-}
-
-.options{
-    display: flex;
-    gap: 1rem;
+.create-post-form textarea{
+    resize: none;
 }
 
 @media screen and (max-width: 720px){
