--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,7 +10,7 @@
     <%- include('partials/nav.ejs') %>
     <main class="container my-4">
         <h2>Create your new post</h2>
-        <form class="my-4" method="post" action="/create">
+        <form class="my-4 create-post-form" method="post" action="/create">
             <div class="row">
                 <div class="col-8 my-3">
                     <label for="formFile" class="form-label">Blog image</label>
