--- a/views/my-posts.ejs
+++ b/views/my-posts.ejs
@@ -12,7 +12,7 @@
         <h2>My posts</h2>
         <div class="my-post my-4">
             <h3>Post title</h3>
-            <div class="options">
+            <div class="my-post-options">
                 <a href="/edit">Edit</a>
                 <a href="/delete">Delete</a>
             </div>
