--- a/views/my-posts.ejs
+++ b/views/my-posts.ejs
@@ -13,8 +13,8 @@
         <div class="my-post my-4">
             <h3>Post title</h3>
             <div class="my-post-options">
-                <a href="/edit">Edit</a>
-                <a href="/delete">Delete</a>
+                <a class="text-reset" href="/edit">Edit</a>
+                <a class="text-reset" href="/delete">Delete</a>
             </div>
         </div>
     </main>
