--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,7 +3,7 @@
 :root{
     --color-black: #1a1a1a;
     --color-black-hover: #000000;
-    --color-gray: #fafafa;
+    --color-gray: #f7f7f7;
     --color-gray-hover: #eaeaea;
 }
 
@@ -107,7 +107,7 @@ h1, h2, h3, h4, h5, h6, p{
 /* --- MY POSTS --- */
 
 .my-post{
-    background-color: var(--color-gray-hover);
+    background-color: var(--color-gray);
     border-radius: .4rem;
     display: flex;
     justify-content: space-between;
