--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,3 +2,5 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <!--STYLES-->
 <link rel="stylesheet" href="css/styles.css">
+<!--FAVICON-->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
