--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,20 +10,28 @@
     <%- include('partials/nav.ejs') %>
     <main class="container my-4">
         <h2><%= locals.post !== undefined ? 'Edit post' : 'Create your new post' %></h2>
-        <form class="my-4 create-post-form" method="post" action="<%= locals.post !== undefined ? '/save' : '/create' %>">
+        <form class="my-4 post-form" method="post" action="<%= locals.post !== undefined ? '/save' : '/create' %>">
             <% if (locals.post){ %>
                 <input type="hidden" name="id" value="<%= locals.post.id %>">
             <% } %>
             <div class="row">
-                <div class="col-8 my-3">
-                    <label for="formFile" class="form-label">Blog image (URL)</label>
-                    <input class="form-control" type="text" name="image" value="<%= locals.post !== undefined ? post.image : ''%>">
+                <div class="my-3 col-8">
+                    <div>
+                        <label for="formFile" class="form-label">Blog image (URL)</label>
+                        <input class="form-control" type="text" name="image" value="<%= locals.post !== undefined ? post.image : ''%>">
+                    </div>
+                    <div>
+                        <label class="form-label" for="title">Title</label>
+                        <input class="form-control" type="text" name="title" value="<%= locals.post !== undefined ? post.title : ''%>">
+                    </div>
                 </div>
-                <img class="col-4" src="#" alt="blog-image">
-            </div>
-            <div class="my-3">
-                <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" name="title" value="<%= locals.post !== undefined ? post.title : ''%>">
+                <div class="col-4 d-flex align-items-center justify-content-center">
+                    <% if (locals.post !== undefined) { %>
+                    <img class="post-image" src="<%= post.image %>" alt="blog-image">
+                    <% } else { %>
+                    <div class="no-post-image">Blog image</div>
+                    <% } %>
+                </div>
             </div>
             <div class="my-3">
                 <label class="form-label" for="content">Content</label>
@@ -34,5 +42,12 @@
             </button>
         </form>
     </main>
+    <script>
+        const postImage = document.querySelector('.post-image');
+        const imageInput = document.querySelector('input[name="image"]');
+        imageInput.addEventListener('input', () => {
+            postImage.src = imageInput.value;
+        });
+    </script>
 </body>
 </html>
