--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,6 +143,10 @@ h1, h2, h3, h4, h5, h6, p{
 
 /* --- GENERAL --- */
 
+.hidden{
+    display: none;
+}
+
 .button{
     border: 0;
     border-radius: .4rem;
